--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,7 @@
   </head>
   <body>
     <form action="/posts" method="POST" id="text">
+			<%= Rack::Csrf.csrf_tag(env) %>
       <input type="text" name="text" size="32" maxlength="512">
       <button>in_txt</button>
     </form>
